--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.show-sql=true
 
+spring.h2.console.enabled=true
+
+# mustache ?? ??? ???
+server.servlet.encoding.force-response=true
+
+spring.profiles.include=oauth
