modify: github action yml file (jar 파일 이름 변경)

--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -42,4 +42,4 @@ jobs:
           aws s3 cp \
           --region ap-northeast-2 \
           --acl private \ 
-          ./springboot-intro-build.zip s3://my-service/
+          ./webservice-0.0.1-SNAPSHOT.zip s3://my-service/
