--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -39,7 +39,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp \
-          --region ap-northeast-2 \
-          --acl private \ 
-          ./webservice-0.0.1-SNAPSHOT.zip s3://my-service/
+          aws s3 sync ./build s3://my-webservice
