--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -50,7 +50,7 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            --acl private \
+#            --acl private \
             ./webservice.zip s3://my-webservice
 
       # Deploy
