--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -39,7 +39,7 @@ jobs:
 
       # 압축 파일 형태로 전달
       - name: Make zip file
-        run: zip -r -qq -j ./webservice.zip ./deploy/webservice.zip
+        run: zip -r -qq -j ./webservice.zip ./deploy
 
       # S3 Bucket으로 전달
       - name: Deliver to AWS S3
@@ -50,7 +50,7 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            ./deploy/webservice.zip s3://my-webservice
+            ./deploy s3://my-webservice
 
       # Deploy
       - name: Deploy
