--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -25,43 +25,21 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      # 전송할 파일을 담을 디렉토리 생성
-      - name: Make Directory for deliver
-        run: mkdir deploy
-
-      # Jar 파일 Copy
-      - name: Copy Jar
-        run: cp ./build/libs/*.jar ./deploy/
-
-      # appspec.yml Copy
-      - name: Copy appspec
-        run: cp appspec.yml ./deploy/
-
-      # 압축 파일 형태로 전달
-      - name: Make zip file
-        run: zip -r -qq -j ./webservice.zip ./deploy
-
-      # S3 Bucket으로 전달
-      - name: Deliver to AWS S3
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: zip 파일 생성
         run: |
-          aws s3 cp \
-            --recursive \
-            --region ap-northeast-2 \
-            ./deploy s3://my-webservice
+          mkdir -p before-deploy
+          cp scripts/*.sh before-deploy/
+          cp appspec.yml before-deploy/
+          cp build/libs/*.jar before-deploy/
+          cd before-deploy && zip -r ./$GITHUB_SHA.zip *
+          cd ../ && mkdir -p deploy
+          mv before-deploy/$GITHUB_SHA.zip deploy/$GITHUB_SHA.zip
 
-      # Deploy
-      - name: Deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run:
-          aws deploy create-deployment \
-          --application-name webservice \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --deployment-group-name webservice-group \
-          --file-exists-behavior OVERWRITE \
-          --s3-location bucket=my-webservice,bundleType=jar,key=webservice-0.0.1-SNAPSHOT.jar \
-          --region ap-northeast-2
+      - name: AWS 자격 증명
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: S3 업로드
+        run: aws s3 cp --region ap-northeast-2 ./deploy/$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
