--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -34,11 +34,8 @@ jobs:
           cd ../ && mkdir -p deploy
           mv before-deploy/$GITHUB_SHA.zip deploy/$GITHUB_SHA.zip
 
-      - name: AWS 자격 증명
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
       - name: S3 업로드
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: aws s3 cp --region ap-northeast-2 ./deploy/$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
