modify: github action yml file

--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -42,4 +42,4 @@ jobs:
           aws s3 cp \
           --recursive \
           --region ap-northeast-2 \
-          ./deploy/$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
+          /deploy/$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
