--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -25,15 +25,23 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
 
+      # 전송할 파일을 담을 디렉토리 생성
+      - name: Make Directory for deliver
+        run: mkdir deploy
+
+      - name: Copy jar
+        run: cp ./build/libs/*.jar ./deploy/
+
+      # appspec.yml Copy
+      - name: Copy appspec
+        run: cp appspec.yml ./deploy/
+
       - name: Make zip file
-        run: zip -r ./$GITHUB_SHA.zip .
+        run: zip -r ./$GITHUB_SHA.zip ./deploy/
 
       - name: S3 업로드
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp \
-          --recursive \
-          --region ap-northeast-2 \
-          ./$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
+          aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://my-service/$GITHUB_SHA.zip
