--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # 실행 환경 설정
+    runs-on: ubuntu-18.04 # 실행 환경 설정
 
     steps:
       - uses: actions/checkout@v2
