--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -52,7 +52,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws deploy create-deployment \
-          --application-name webservice \
+          --application-name web-service \
           --deployment-config-name CodeDeployDefault.OneAtATime \
           --deployment-group-name webservice-group \
           --s3-location bucket=my-webservice,bundleType=zip,key=$GITHUB_SHA.zip
