--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -55,4 +55,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws deploy create-deployment --application-name web-service --deployment-group-name webservice-group --s3-location bucket=my-webservice,bundleType=zip,key=$GITHUB_SHA.zip --region ap-northeast-2
+        run: aws deploy create-deployment --application-name web-service --deployment-group-name webservice-group --file-exists-behavior OVERWRITE --s3-location bucket=my-webservice,bundleType=zip,key=$GITHUB_SHA.zip --region ap-northeast-2
