무중단 배포 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.enabled=true
 # mustache ?? ??? ???
 server.servlet.encoding.force-response=true
 
-spring.profiles.include=oauth
+#spring.profiles.include=real-oauth
 
 spring.session.store-type=jdbc
 
